páginas: e-CPF e NF-e

--- a/e-cpf.html
+++ b/e-cpf.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Certificado Digital Vale | e-CNPJ</title>
+    <title>Certificado Digital Vale | e-CPF</title>
 
     <link rel="bookmark" href="favicon_16.ico"/>
 
@@ -115,9 +115,9 @@
     </nav>
 
     <!-- Header Section -->
-    <section id="e-cnpj" class="header-section">
+    <section id="e-cpf" class="header-section">
       <div class="container">
-        <div class="ecnpj-banner">
+        <div class="ecpf-banner">
           <div class="container-fluid">
             <img class="img-responsive pull-right" src="img/logo-serasa.png"></img>
         </div>
@@ -125,14 +125,14 @@
     </section>
 
     <!-- Table Section -->
-    <section id="e-cnpj" class="table-section">
+    <section id="e-cpf" class="table-section">
       <div class="container">
         <div class="row first-row">
           <div class="square img-product">
             <div class="content">
               <div class="table">
                 <div class="table-cell">
-                  <img class="img-responsive" src="img/ecnpj-a3-cartao.jpg"></img>
+                  <img class="img-responsive" src="img/ecpf-a3-cartao-sped.jpg"></img>
                 </div>
               </div>
             </div>
@@ -142,7 +142,7 @@
               <div class="table">
                 <div class="table-cell">
                   <div class="name-product">
-                    <h3>e-CNPJ</h3>
+                    <h3>e-CPF</h3>
                     <h3>A3 | Cartão</h3>
                   </div>
                 </div>
@@ -185,7 +185,7 @@
             <div class="content">
               <div class="table">
                  <div class="table-cell">
-                    <img class="img-responsive" src="img/ecnpj-a3-cartao-leitor.png"></img>
+                    <img class="img-responsive" src="img/ecpf-a3-cartao-leitor-sped.png"></img>
                   </div>
                 </div>
               </div>
@@ -195,7 +195,7 @@
               <div class="table">
                 <div class="table-cell">
                   <div class="name-product">
-                    <h3>e-CNPJ</h3>
+                    <h3>e-CPF</h3>
                     <h3>A3 | Cartão + Leitora</h3>
                   </div>
                 </div>
@@ -248,7 +248,7 @@
               <div class="table">
                 <div class="table-cell">
                   <div class="name-product">
-                    <h3>e-CNPJ</h3>
+                    <h3>e-CPF</h3>
                     <h3>A3 | Token</h3>
                   </div>
                 </div>
@@ -292,7 +292,7 @@
               <div class="table">
                 <div class="table-cell">
                   <div class="name-product text-center">
-                    <h3>e-CNPJ</h3>
+                    <h3>e-CPF</h3>
                     <h3>A3 | Mídia do cliente</h3>
                   </div>
                 </div>
@@ -326,7 +326,7 @@
               <div class="table">
                 <div class="table-cell">
                   <div class="name-product text-center">
-                    <h3>e-CNPJ</h3>
+                    <h3>e-CPF</h3>
                     <h3>A1</h3>
                   </div>
                 </div>
@@ -349,7 +349,7 @@
 
 
     <!-- Accordion Section -->
-    <section id="e-cnpj" class="accordion-section">
+    <section id="e-cpf" class="accordion-section">
       <div class="container">
         <div class="row">
           <h4>Loren ipsum dolor sit amet, consectetur adispiscing elit, praesent malesuada mauris</h4>
