--- a/nf-e.html
+++ b/nf-e.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Certificado Digital Vale | e-CNPJ</title>
+    <title>Certificado Digital Vale | NF-e</title>
 
     <link rel="bookmark" href="favicon_16.ico"/>
 
@@ -115,9 +115,9 @@
     </nav>
 
     <!-- Header Section -->
-    <section id="e-cnpj" class="header-section">
+    <section id="nf-e" class="header-section">
       <div class="container">
-        <div class="ecnpj-banner">
+        <div class="nfe-banner">
           <div class="container-fluid">
             <img class="img-responsive pull-right" src="img/logo-serasa.png"></img>
         </div>
@@ -125,55 +125,43 @@
     </section>
 
     <!-- Table Section -->
-    <section id="e-cnpj" class="table-section">
+    <section id="nf-e" class="table-section">
       <div class="container">
         <div class="row first-row">
-          <div class="square img-product">
-            <div class="content">
+          <div class="square-nfe img-product">
+            <div class="content-nfe">
               <div class="table">
                 <div class="table-cell">
-                  <img class="img-responsive" src="img/ecnpj-a3-cartao.jpg"></img>
+                  <img class="img-responsive" src="img/nfe-cartao.jpg"></img>
                 </div>
               </div>
             </div>
           </div>
-          <div class="square title-product">
-            <div class="content">
+          <div class="square-nfe title-product">
+            <div class="content-nfe">
               <div class="table">
                 <div class="table-cell">
                   <div class="name-product">
-                    <h3>e-CNPJ</h3>
+                    <h3>PJ NF-e</h3>
                     <h3>A3 | Cartão</h3>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="square price meses12">
-            <div class="content">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h5>Validade: 12 meses</h5>
-                    <h4>R$ 270,00</h4>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square price meses24">
-            <div class="content">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h5>Validade: 24 meses</h5>
-                  <h4>R$ 325,00</h4>       
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square price meses36">
-            <div class="content">
+          <div class="square-nfe price-nfe meses36 no-border-nfe">
+            <div class="content-nfe">
               <div class="table">
                 <div class="table-cell text-center">               
                   <h5>Validade: 36 meses</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="square-nfe price-nfe meses36 no-border-nfe">
+            <div class="content-nfe">
+              <div class="table">
+                <div class="table-cell text-center">               
                   <h4>R$ 340,00</h4>
                 </div>
               </div>
@@ -181,52 +169,40 @@
           </div>
         </div>
         <div class="row">
-          <div class="square img-product">
-            <div class="content">
+          <div class="square-nfe img-product">
+            <div class="content-nfe">
               <div class="table">
                  <div class="table-cell">
-                    <img class="img-responsive" src="img/ecnpj-a3-cartao-leitor.png"></img>
+                    <img class="img-responsive" src="img/nfe-cartao-leitor.png"></img>
                   </div>
                 </div>
               </div>
           </div>
-          <div class="square title-product">
-            <div class="content">
+          <div class="square-nfe title-product">
+            <div class="content-nfe">
               <div class="table">
                 <div class="table-cell">
                   <div class="name-product">
-                    <h3>e-CNPJ</h3>
+                    <h3>PJ NF-e</h3>
                     <h3>A3 | Cartão + Leitora</h3>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="square price meses12">
-            <div class="content">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h5>Validade: 12 meses</h5>
-                    <h4>R$ 270,00</h4>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square price meses24">
-            <div class="content">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h5>Validade: 24 meses</h5>
-                  <h4>R$ 325,00</h4>       
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square price meses36">
-            <div class="content">
+          <div class="square-nfe price-nfe meses36 no-border-nfe">
+            <div class="content-nfe">
               <div class="table">
                 <div class="table-cell text-center">               
                   <h5>Validade: 36 meses</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="square-nfe price-nfe meses36 no-border-nfe">
+            <div class="content-nfe">
+              <div class="table">
+                <div class="table-cell text-center">               
                   <h4>R$ 340,00</h4>
                 </div>
               </div>
@@ -234,8 +210,8 @@
           </div>
         </div>
         <div class="row">
-          <div class="square img-product">
-            <div class="content">
+          <div class="square-nfe img-product">
+            <div class="content-nfe">
               <div class="table">
                  <div class="table-cell">
                     <img class="img-responsive" src="img/ecnpj-a3-token.png"></img>
@@ -243,43 +219,31 @@
                 </div>
               </div>
           </div>
-          <div class="square title-product">
-            <div class="content">
+          <div class="square-nfe title-product">
+            <div class="content-nfe">
               <div class="table">
                 <div class="table-cell">
                   <div class="name-product">
-                    <h3>e-CNPJ</h3>
+                    <h3>PJ NF-e</h3>
                     <h3>A3 | Token</h3>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="square price meses12">
-            <div class="content">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h5>Validade: 12 meses</h5>
-                    <h4>R$ 270,00</h4>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square price meses24">
-            <div class="content">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h5>Validade: 24 meses</h5>
-                  <h4>R$ 325,00</h4>       
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square price meses36">
-            <div class="content">
+          <div class="square-nfe price-nfe meses36 no-border-nfe">
+            <div class="content-nfe">
               <div class="table">
                 <div class="table-cell text-center">               
                   <h5>Validade: 36 meses</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="square-nfe price-nfe meses36 no-border-nfe">
+            <div class="content-nfe">
+              <div class="table">
+                <div class="table-cell text-center">               
                   <h4>R$ 340,00</h4>
                 </div>
               </div>
@@ -287,58 +251,64 @@
           </div>
         </div>
         <div class="row">
-          <div class="square no-image title-product">
-            <div class="content">
+          <div class="square-nfe no-image-nfe title-product">
+            <div class="content-nfe">
               <div class="table">
                 <div class="table-cell">
                   <div class="name-product text-center">
-                    <h3>e-CNPJ</h3>
+                    <h3>PJ NF-e</h3>
                     <h3>A3 | Mídia do cliente</h3>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="square price meses12">
-            <div class="content">
+          <div class="square-nfe price-nfe meses36 no-border-nfe">
+            <div class="content-nfe">
               <div class="table">
                 <div class="table-cell text-center">               
-                  <h5>Validade: 12 meses</h5>
-                    <h4>R$ 270,00</h4>
+                  <h5>Validade: 36 meses</h5>
                 </div>
               </div>
             </div>
           </div>
-          <div class="square price meses24">
-            <div class="content">
+          <div class="square-nfe price-nfe meses36 no-border-nfe">
+            <div class="content-nfe">
               <div class="table">
                 <div class="table-cell text-center">               
-                  <h5>Validade: 24 meses</h5>
-                  <h4>R$ 325,00</h4>       
+                  <h4>R$ 340,00</h4>
                 </div>
               </div>
             </div>
           </div>
         </div>
         <div class="row">
-          <div class="square no-image last title-product">
-            <div class="content">
+          <div class="square-nfe no-image-nfe last title-product">
+            <div class="content-nfe">
               <div class="table">
                 <div class="table-cell">
                   <div class="name-product text-center">
-                    <h3>e-CNPJ</h3>
+                    <h3>PJ NF-e</h3>
                     <h3>A1</h3>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="square price last meses12">
-            <div class="content">
+          <div class="square-nfe price-nfe last meses12-nfe no-border-nfe">
+            <div class="content-nfe">
               <div class="table">
                 <div class="table-cell text-center">               
                   <h5>Validade: 12 meses</h5>
-                    <h4>R$ 270,00</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="square-nfe price-nfe last meses12-nfe no-border-nfe">
+            <div class="content-nfe">
+              <div class="table">
+                <div class="table-cell text-center">               
+                  <h4>R$ 270,00</h4>
                 </div>
               </div>
             </div>
